--- a/package.json
+++ b/package.json
@@ -15,7 +15,15 @@
         "laravel-vite-plugin": "^0.7.5",
         "postcss": "^8.4.14",
         "tailwindcss": "^3.1.0",
+        "sass": "^1.55.0",
         "vite": "^4.0.0",
         "vue": "^3.2.31"
+    },
+    "dependencies": {
+        "chart.js": "3.3.2",
+        "primeflex": "^3.3.0",
+        "primeicons": "^6.0.1",
+        "primevue": "^3.28.0",
+        "vue-router": "^4.1.5"
     }
 }
